<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="8dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title="Calculadora"
        app:titleTextColor="?attr/colorOnSurface"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Área superior -->
    <LinearLayout
        android:id="@+id/superiorArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_superior_corners"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical">

        <!-- Área do botão dos modos diurno/escuro -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Ícone modo diurno -->
            <ImageView
                android:id="@+id/iconDay"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:src="@drawable/sun"/>

            <!-- Botão Toggle -->
            <ImageButton
                android:id="@+id/btnToggleTheme"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/toggle_button"
                android:src="@drawable/daymode"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:contentDescription="@string/toggle_theme"/>

            <!-- Ícone modo noturno -->
            <ImageView
                android:id="@+id/iconNight"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:src="@drawable/moon"/>
        </LinearLayout>

        <!-- Área do display (números digitados) -->
        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="0"
            android:textColor="@color/typed_text"
            android:textSize="52sp"/>

        <!-- Área dos botões do Histórico e do Backspace -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp">

            <ImageButton
                android:id="@+id/iconHistoric"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="true"
                android:background="@color/historic_portrait_button"
                android:src="@drawable/historic"
                android:contentDescription="historic_button_description"
                />

            <!-- Espaço flexível -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <!-- Linha branca de separação -->
    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@id/superiorArea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Área inferior (botões e histórico da calculadora) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/areaInferior"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_inferior_corners"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_separator_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="281dp" />

        <GridLayout
            android:id="@+id/gridLeft"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:columnCount="3"
            android:paddingTop="4dp"
            android:rowCount="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vertical_separator_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Linha 1 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClear"
                style="@style/RoundedButton"
                android:layout_marginEnd="16dp"
                android:text="C"
                android:textColor="@color/operations_text"
                app:backgroundTint="@color/operation_buttons"
                android:layout_column="0"
                android:layout_row="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBackspace"
                style="@style/RoundedButton"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/backspace"
                android:text=""
                android:textColor="@color/operations_text"
                app:backgroundTint="@color/operation_buttons"
                app:icon="@drawable/backspace"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="32dp"
                app:iconTint="@null"
                android:layout_column="1"
                android:layout_row="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPorcentagem"
                style="@style/RoundedButton"
                android:text="%"
                android:textColor="@color/operations_text"
                app:backgroundTint="@color/operation_buttons"
                android:layout_column="2"
                android:layout_row="0" />

            <!-- Linha 2 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn7"
                style="@style/RoundedButton"
                android:text="7"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="0"
                android:layout_row="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn8"
                style="@style/RoundedButton"
                android:text="8"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="1"
                android:layout_row="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn9"
                style="@style/RoundedButton"
                android:text="9"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="2"
                android:layout_row="1" />

            <!-- Linha 3 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn4"
                style="@style/RoundedButton"
                android:text="4"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="0"
                android:layout_row="2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5"
                style="@style/RoundedButton"
                android:text="5"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="1"
                android:layout_row="2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn6"
                style="@style/RoundedButton"
                android:text="6"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="2"
                android:layout_row="2" />

            <!-- Linha 4 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                style="@style/RoundedButton"
                android:text="1"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="0"
                android:layout_row="3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                style="@style/RoundedButton"
                android:text="2"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="1"
                android:layout_row="3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                style="@style/RoundedButton"
                android:text="3"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="2"
                android:layout_row="3" />

            <!-- Linha 5 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChange"
                style="@style/RoundedButton"
                android:contentDescription="@string/btn_change_desc"
                android:text=""
                app:backgroundTint="@color/numbers_change_buttons"
                app:icon="@drawable/change"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="32dp"
                app:iconTint="@null"
                android:layout_column="0"
                android:layout_row="4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn0"
                style="@style/RoundedButton"
                android:text="0"
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="1"
                android:layout_row="4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPonto"
                style="@style/RoundedButton"
                android:text="."
                app:backgroundTint="@color/numbers_change_buttons"
                android:layout_column="2"
                android:layout_row="4" />
        </GridLayout>

        <LinearLayout
            android:id="@+id/historicoBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/historic_background"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vertical_separator_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/historicoConteudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical">

                </LinearLayout>

            </ScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLimparHistorico"
                style="@style/BotaoLimpar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Limpar"
                app:backgroundTint="@color/equals_clear_buttons" />
        </LinearLayout>

        <GridLayout
            android:id="@+id/gridRight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:columnCount="1"
            android:paddingTop="4dp"
            android:rowCount="5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_separator_guideline">

            <!-- Linha 1 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDividir"
                style="@style/RoundedButton"
                android:text="÷"
                android:textColor="@color/operations_text"
                app:backgroundTint="@color/operation_buttons"
                android:layout_column="0"
                android:layout_row="0" />

            <!-- Linha 2 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMultiplicar"
                style="@style/RoundedButton"
                android:text="×"
                android:textColor="@color/operations_text"
                app:backgroundTint="@color/operation_buttons"
                android:layout_column="0"
                android:layout_row="1" />

            <!-- Linha 3 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubtrair"
                style="@style/RoundedButton"
                android:text="-"
                android:textColor="@color/operations_text"
                app:backgroundTint="@color/operation_buttons"
                android:layout_column="0"
                android:layout_row="2" />

            <!-- Linha 4 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSomar"
                style="@style/RoundedButton"
                android:text="+"
                android:textColor="@color/operations_text"
                app:backgroundTint="@color/operation_buttons"
                android:layout_column="0"
                android:layout_row="3" />

            <!-- Linha 5 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIgual"
                style="@style/RoundedButton"
                android:text="="
                app:backgroundTint="@color/equals_clear_buttons"
                android:layout_column="0"
                android:layout_row="4" />
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
